test/expected/cli/set_errexit_options.out
== set -e aborts before the next command:
rc=1
== set +e lets the run continue:
reached
rc=0
== an unknown mood is rejected:
shit: 1:12: error: Builtin 'set': Unknown --mood value 'badmood', expected 'shit', 'bash', 'sh', or 'bash-posix'.
     1 |  set --mood badmood
       |             ^~~~~~~ here.
rc=1
== set -o lists the option states:
allexport      	off
notify         	off
errexit        	off
noglob         	off
hashall        	on
keyword        	off
monitor        	off
noexec         	off
nounset        	on
verbose        	off
xtrace         	off
braceexpand    	on
noclobber      	off
errtrace       	off
physical       	off
functrace      	off
pipefail       	on
failglob       	on
shitbox        	off
vi             	off
emacs          	off
posix          	off
force-warnings 	off
mimicry        	off
force-diagnostics	off
no-diagnostics 	off
